--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <h1 class="heading">Memory Game</h1>
     <section class="Flip">
         <div id="game-board" class="board"></div>
-        <form method="post" action="ScoreServlet">
+<!--         <form method="post" action="ScoreServlet">
            <div class="users">
                 <input type="text" name="username" placeholder="Enter your name" required>
                 <input type="hidden" id="attempts" name="attempts">
                 <input type="hidden" id="timeTaken" name="timeTaken">
                 <button type="submit" onclick="submitScore()">Submit Score</button>
            </div>
-        </form>
+        </form> -->
     </section>
     <script src="script.js"></script>
 </body>
